--- a/roles/jenkins/defaults/main.yml
+++ b/roles/jenkins/defaults/main.yml
@@ -10,7 +10,10 @@ jenkins_home: /var/lib/jenkins
 jenkins_hostname: localhost
 jenkins_http_port: 8080
 jenkins_jar_location: /opt/jenkins-cli.jar
-jenkins_plugins: []
+jenkins_plugins:
+   - git
+   - sonar
+   - ssh
 jenkins_url_prefix: "/jenkins"
 jenkins_java_options: "-Djenkins.install.runSetupWizard=false"
 
