--- a/roles/jenkins/defaults/main.yml
+++ b/roles/jenkins/defaults/main.yml
@@ -14,6 +14,16 @@ jenkins_plugins:
    - git
    - sonar
    - ssh
+   - ant
+   - docker-workflow
+   - jquery
+   - junit
+   - ldap
+   - gradle
+   - ssh-slaves
+   - mailer
+   - maven-plugin
+   - workflow-aggregator
 jenkins_url_prefix: "/jenkins"
 jenkins_java_options: "-Djenkins.install.runSetupWizard=false"
 
